--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".bmi"></activity>
+        <activity android:name=".apple"></activity>
+        <activity android:name=".orange" />
+        <activity android:name=".watermelon" />
+        <activity android:name=".mango" />
+        <activity android:name=".bmi" />
         <activity android:name=".chickensoup" />
         <activity android:name=".pizzapasta" />
         <activity android:name=".potatosalad" />
